# SolarCollectorControllerESP-IDF

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/include/: README.txt  config_model.h  devices_model.h  display_controller.h  display_device.h  global_controller.h  global_model.h  joystick_controller.h  joystick_device.h  measure_controller.h  relay_controller.h  relay_device.h  thermometers_controller.h  thermometers_device.h  user_io_config.h  user_io_controller.h  user_io_menu.h  user_io_normal.h  user_io_state.h  wifi_controller.h
main/src/: README.txt  config_model.c  devices_model.c  display_controller.c  display_device.c  global_controlle.c  global_controller.c  global_model.c  joystick_controller.c  joystick_device.c  measure_controller.c  relay_controller.c  relay_device.c  thermometers_controller.c  user_io_config.c  user_io_controller.c  user_io_menu.c  user_io_normal.c  wifi_controller.c
