idf_component_register(SRCS 
    "main.c"
    "src/devices_model.c"
    "src/display_device.c"
    "src/display_controller.c"
    "src/joystick_device.c"
    "src/joystick_controller.c"
    "src/user_io_controller.c"
    "src/user_io_normal.c"
    "src/user_io_menu.c"
    "src/user_io_config.c"
    "src/config_model.c"
    "src/global_model.c"

                    INCLUDE_DIRS ".")
