idf_component_register(SRCS 
    "main.c"
    "src/devices_model.c"
    "src/display_device.c"
    "src/display_controller.c"
    "src/joystick_device.c"
    "src/joystick_controller.c"
    "src/user_io_controller.c"
    "src/user_io_normal.c"
    "src/user_io_menu.c"
    "src/user_io_config.c"
    "src/config_model.c"
    "src/global_model.c"
    "src/relay_device.c"
    "src/relay_controller.c"
    "src/thermometers_controller.c"
    "src/global_model.c"
    "src/global_controller.c"
                    INCLUDE_DIRS ".")
